fixed the problematic dots

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         content="VED is the VLSI &amp; Embedded Design Club at MIT Bangalore — a community of engineers building at the intersection of silicon and systems." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- FIXED: DM Mono only has weights 300, 400, 500 — removed 900 which doesn't exist -->
     <link
-        href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600&display=swap"
         rel="stylesheet" />
 </head>
 
